--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="/static/commonJs/Settings.js"></script>
-		<script src="/static/commonJs/Common.js"></script>
-		<script src="/static/commonJs/ValiData.js"></script>
-		<script src="/static/commonJs/jquery-3.1.1.min.js"></script>
-		<script src="/static/commonJs/vxe-table-extention.js"></script>
+		<script src="/static/js/Settings.js"></script>
+		<script src="/static/js/Common.js"></script>
+		<script src="/static/js/ValiData.js"></script>
+		<script src="/static/js/jquery-3.1.1.min.js"></script>
+		<script src="/static/js/vxe-table-extention.js"></script>
+		<link href="public/static/css/font-awesome.min.css" rel="stylesheet"/>
     <title>Vite App</title>
   </head>
   <body>
